Начало работы над созданеим меню ноды

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -352,6 +352,17 @@ body {
 		}
 	}
 
+	.menuBtn {
+//		width:16px;
+//		height:16px;
+		margin-left:5px;
+		background-color: #eee;
+
+		&:hover {
+			background-color: #ddd;
+		}
+	}
+
 	.topic {
 		cursor:pointer;
 		border-left-width:10px;
