--- a/apps/web.main/stock/styles/main.css
+++ b/apps/web.main/stock/styles/main.css
@@ -92,6 +92,10 @@ img 	{border:0;}
     -webkit-box-shadow:none;
 }
 
+.control {
+	cursor:pointer;
+}
+
 /* дебаг и консоль */
 #debug_console { height:140px; }
 
