исправление переноса заголовка темы, начало работы над новым интерфейсом создания темы

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -239,10 +239,10 @@ body {
 				font-size:110%;
 				padding:2px 4px;
 				border:1px dotted transparent;
-				float:left;
 				min-width: 200px;
 				max-height: 100%;
 				margin-left:2px;
+				margin-right:30px;
 
 				&[contenteditable="true"] {
 					background-color: white;
