Изменение интерфейса создания темы - 2

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -458,6 +458,62 @@ body {
 	}
 }
 
+.topic-edit {
+	background-color: #fff;
+	padding-top:5px;
+
+	.row {
+		margin:20px;
+	}
+
+	input[type="text"] {
+
+	}
+
+	label {
+
+		display:block;
+		margin-right:20px;
+
+		span {
+			font-size: 85%;
+			color:#777;
+		}
+	}
+
+	.title {
+		font-size: 120%;
+		font-weight: bold;
+		padding: 0.3em 0.5em;
+		border: 1px solid;
+		border-color: #ccc #ccc #eee #ccc;
+		width: 100%;
+	}
+
+	textarea {
+		width:100%;
+		min-height: 100px;
+		padding: 0.3em 0.5em;
+		border: 1px solid;
+		border-color: #ccc #ccc #eee #ccc;
+		font-family: sans-serif;
+	}
+
+	.smart-search {
+
+		input[type="text"] {
+			padding: 0.3em 0.5em;
+			border: 1px solid;
+			border-color: #ccc #ccc #eee #ccc;
+		}
+
+		.smart-area .tag {
+			margin-right: 7px;
+			padding: 4px 7px;
+		}
+	}
+}
+
 #scaled-bg {
 	position: fixed;
 	z-index: -1;
@@ -545,6 +601,15 @@ body {
 		padding-left:17px;
 	}
 }
+
+input[type="submit"], input[type="button"] {
+	height:auto;
+}
+
+input[type="button"] {
+	background-color: #eee;
+}
+
 
 .button:hover {
 	border-color: #ccc;
