Подготовка агента онлайн-статуса пользователей

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -379,6 +379,7 @@ body {
 		img {
 			width:48px;
 			height:48px;
+			display: block;
 		}
 	}
 
@@ -491,6 +492,19 @@ body {
 		background-color: #fff6df;
 	}
 }
+
+.isOnline {
+	position: absolute;
+	bottom: 0;
+	right: 0;
+	border:solid white;
+	border-width: 1px 0 0 1px;
+	width: 6px;
+	height: 6px;
+	background-color: #9acd32;
+	display:none;
+}
+
 
 .topic-edit {
 	background-color: #fff;
