Простейший список тегов

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -381,6 +381,13 @@ body {
 			}
 		}
 	}
+
+	&.navigation {
+		.tagArea {
+			background-color: #fff;
+			padding: 8px;
+		}
+	}
 }
 
 #tinng-units-area {
@@ -771,6 +778,10 @@ body {
 		height: 100%;
 		width: 11px;
 		text-align: left;
+	}
+
+	&.unused {
+		.opacity(0.5);
 	}
 }
 
