--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -78,6 +78,7 @@ body {
 
 #tinng-main {
 	position:relative;
+	overflow: hidden;
 }
 
 #curtain {
@@ -207,7 +208,6 @@ body {
 
 #tinng-main-content {
 	position: relative;
-	overflow-x: hidden;
 
 	.unit-panel {
 		position: absolute;
@@ -369,7 +369,7 @@ body {
 			min-width: 200px;
 			max-height: 100%;
 			margin-left:2px;
-			margin-right:30px;
+			margin-right:53px;
 
 			&[contenteditable="true"] {
 				background-color: white;
@@ -919,7 +919,7 @@ input[type="button"] {
 .button .tip {
 	position: absolute;
 	opacity: 0.9;
-	z-index: 1000;
+	z-index: 2000;
 }
 
 .button.left .tip {left:0;}
