Завершена схема БД с учетом доступности тем

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -673,6 +673,15 @@ body {
 			color:#007bb7;
 		}
 
+		.private {
+			background-color: #999;
+			color: #fff;
+			padding: 2px 5px;
+			font-size: 80%;
+			font-weight: normal;
+			margin-left: 5px;
+		}
+
 		.lastmessage > div {
 			border-top:1px solid #ddd;
 			margin-top: 5px;
