Подготовка к введению диалогов - 2

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -377,6 +377,27 @@ body {
 				border-color: #aaa;
 				min-height: 18px;
 			}
+
+			.dialogueWrap {
+				position: relative;
+				display: inline-block;
+			}
+
+			.userItem {
+				background-color: transparent;
+				position: absolute;
+				top: -19px;
+
+				.avatar {
+					position: absolute;
+				}
+
+				.name {
+					color:white;
+					padding-left: 30px;
+					white-space: nowrap;
+				}
+			}
 		}
 
 		@binWidth: 60px;
