--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -1232,16 +1232,16 @@ input[type="button"] {
 		}
 
 		#decoration-area {
-			height:80px;
+			height:70px;
 		}
 
-		#tinng-main-footer {
+		/*#tinng-main-footer {
 			height:25px;
-		}
+		}*/
 
-		.editor {
+		/*.editor {
 			bottom:25px;
-		}
+		}*/
 
 		#dialogue {
 			margin:140px auto 110px auto;
