Радиогруппы, сортировка тем

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -760,7 +760,7 @@ body {
 			.private {font-size: 85%;}
 		}
 
-		.data_cell {padding: 8px 22px 8px 18px;}
+		.data_cell {padding: 8px 22px 8px 12px;}
 	}
 
 	.post {
@@ -831,7 +831,7 @@ body {
 
 	.settings-group {
 		padding:6px;
-		border-bottom: 1px solid #ccc;
+		border-bottom: 1px solid #eee;
 
 		&:last-child {
 			border:0;
