--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -742,6 +742,35 @@ body {
 		}
 	}
 
+	&.middle .topic {
+		.lastmessage {
+			display:none !important;
+		}
+
+		.data_cell {
+			padding: 5px 10px 9px 18px;
+		}
+
+		.topicname {
+			margin: 2px 0 4px;
+			font-size: 13px;
+			.private {font-size: 85%;}
+		}
+
+		.author, .postsquant {
+			font-size: 11px;
+		}
+
+		.tag {
+			margin: 4px 4px 0 0;
+			padding: 1px 3px;
+		}
+
+		.message {
+			color:#888;
+		}
+	}
+
 	&.short .topic {
 
 		&.active {background-position: -4px center;}
