Работа над уведомленями рабочего стола

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -199,6 +199,12 @@ body {
 			vertical-align: middle;
 			margin-right:8px;
 		}
+
+		.notification_perm_request {
+			display:none;
+			color:orange;
+			margin:5px 10px 0 0;
+		}
 	}
 }
 
