--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -1058,16 +1058,69 @@ body {
 
 .textarea-wrapper {
 	background: white;
-	border:1px solid #ccc;
+	//border:1px solid #ccc;
 	margin-bottom:4px;
 	max-height: 200px;
 	overflow-y: auto;
 	padding:1px;
 }
 
+
+
+
+.textarea-wrapper .cke_top {
+	background: #eee;
+	box-shadow: none;
+	padding: 0 0 1px 0;
+	border:none;
+}
+
+.textarea-wrapper .cke_chrome {
+	border:none;
+}
+
+.textarea-wrapper .cke_contents {
+	border:1px solid #ccc;
+	min-height: 40px;
+}
+
+.textarea-wrapper .cke_toolgroup {
+	border-color: #ccc;
+	border-radius: 0;
+	box-shadow: none;
+}
+
+.textarea-wrapper a.cke_button {
+	padding: 2px 5px;
+}
+
+.textarea-wrapper .cke_wysiwyg_div {
+	padding:4px 6px;
+}
+
+.textarea-wrapper .cke_source {
+	background: #333;
+	color:#ddd;
+	display: block;
+	padding: 4px 0;
+}
+.textarea-wrapper .cke_source < .textarea-wrapper .cke_contents {
+	border:1px solid red;
+}
+
+
+
+
 .textarea {
 	padding:4px 6px;
 	min-height: 1.4em;
+}
+
+blockquote {
+	margin:2px 0;
+	padding:5px 7px 5px 20px;
+	background: #eee;
+	border:1px solid #ddd;
 }
 
 /* tags */
