--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -890,6 +890,13 @@ body {
 			margin-right:-5px;
 		}
 
+		.controls2 {
+			position: absolute;
+			bottom: 7px;
+			right: 7px;
+			width: 40%;
+		}
+
 		.message {
 			border:1px solid;
 			border-color:transparent;
@@ -1059,55 +1066,76 @@ body {
 .textarea-wrapper {
 	background: white;
 	//border:1px solid #ccc;
-	margin-bottom:4px;
+	//margin-bottom:4px;
 	max-height: 200px;
 	overflow-y: auto;
-	padding:1px;
+	//padding:1px;
 }
 
 
 
 
-.textarea-wrapper .cke_top {
-	background: #eee;
+#tinng-main-content .cke_top,
+#tinng-main-content .cke_bottom {
+	background: transparent;
 	box-shadow: none;
 	padding: 0 0 1px 0;
 	border:none;
 }
 
-.textarea-wrapper .cke_chrome {
+#tinng-main-content .textarea-wrapper .cke_top,
+#tinng-main-content .textarea-wrapper .cke_bottom{
+	background: #eee;
+}
+
+#tinng-main-content .cke_bottom {
+
+}
+
+#tinng-main-content .cke_bottom .cke_toolgroup {
+	margin: 5px 6px 0 0;
+}
+
+#tinng-main-content .cke_chrome {
 	border:none;
+	box-shadow: none;
 }
 
-.textarea-wrapper .cke_contents {
+#tinng-main-content .cke_contents {
 	border:1px solid #ccc;
-	min-height: 40px;
+	min-height: 24px;
 }
 
-.textarea-wrapper .cke_toolgroup {
+#tinng-main-content .cke_toolgroup {
 	border-color: #ccc;
 	border-radius: 0;
 	box-shadow: none;
 }
 
-.textarea-wrapper a.cke_button {
+#tinng-main-content a.cke_button {
 	padding: 2px 5px;
 }
 
-.textarea-wrapper .cke_wysiwyg_div {
+#tinng-main-content .cke_wysiwyg_div {
 	padding:4px 6px;
 }
 
-.textarea-wrapper .cke_source {
+#tinng-main-content .cke_source {
 	background: #333;
 	color:#ddd;
 	display: block;
 	padding: 4px 0;
 }
-.textarea-wrapper .cke_source < .textarea-wrapper .cke_contents {
-	border:1px solid red;
+
+#tinng-main-content .cke_toolbar_separator {
+	margin: 2px 2px 0;
 }
 
+.submitWrap {
+	position: absolute;
+	bottom: 6px;
+	right:4px;
+}
 
 
 
@@ -1118,9 +1146,21 @@ body {
 
 blockquote {
 	margin:2px 0;
-	padding:5px 7px 5px 20px;
-	background: #eee;
+	padding:5px 7px 5px 25px;
+	background: #eee url("../../skins/clarity/images/icons/quote.png") no-repeat 4px 4px;
 	border:1px solid #ddd;
+
+	cite {
+		display:block;
+		font-style: normal;
+		font-size: 11px;
+		color: #888;
+		margin: -4px 0 3px 1px;
+	}
+
+	footer {
+		display:none;
+	}
 }
 
 /* tags */
