--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -1011,7 +1011,7 @@ body {
 
 	textarea {
 		width:100%;
-		min-height: 100px;
+		min-height: 20px;
 		padding: 0.3em 0.5em;
 		border: 1px solid;
 		border-color: #ccc #ccc #eee #ccc;
@@ -1055,6 +1055,15 @@ body {
 
 #tinng-main .editor {
 	bottom:@bottomOffset;
+
+	.handle {
+		margin:-4px auto 0;
+		width: 30px;
+		height: 3px;
+		background: #ccc;
+		border: 2px solid #eee;
+		cursor: ns-resize;
+	}
 }
 
 .editor-inner {
@@ -1067,8 +1076,8 @@ body {
 	background: white;
 	//border:1px solid #ccc;
 	//margin-bottom:4px;
-	max-height: 200px;
-	overflow-y: auto;
+//	max-height: 200px;
+//	overflow-y: auto;
 	//padding:1px;
 }
 
@@ -1088,10 +1097,6 @@ body {
 	background: #eee;
 }
 
-#tinng-main-content .cke_bottom {
-
-}
-
 #tinng-main-content .cke_bottom .cke_toolgroup {
 	margin: 5px 6px 0 0;
 }
@@ -1102,22 +1107,66 @@ body {
 }
 
 #tinng-main-content .cke_contents {
-	border:1px solid #ccc;
-	min-height: 24px;
+	border:1px solid;
+	border-color: #ccc #ccc #eee #ccc;
+	min-height: 30px;
+	overflow-y: auto;
+	max-height: 350px;
+}
+
+#tinng-main-content .textarea-wrapper .cke_contents {
+	border-color: #ccc #ccc #ddd #ccc;
 }
 
 #tinng-main-content .cke_toolgroup {
-	border-color: #ccc;
+	//border-color: #ccc;
 	border-radius: 0;
+	border:none;
 	box-shadow: none;
+	background: #fff;
+}
+
+/* кнопки */
+
+#tinng-main-content .textarea-wrapper .cke_toolgroup {
+	background: #eee;
 }
 
 #tinng-main-content a.cke_button {
 	padding: 2px 5px;
+	cursor: pointer;
 }
 
+#tinng-main-content a.cke_button span {
+	cursor: pointer;
+}
+
+#tinng-main-content a.cke_button:hover {
+	background: #eee;
+	box-shadow: none;
+}
+
+#tinng-main-content .textarea-wrapper  a.cke_button:hover {
+	background: #f8f8f8;
+}
+
+#tinng-main-content a.cke_button_disabled,
+#tinng-main-content a.cke_button_disabled span{
+	cursor:default;
+}
+
+#tinng-main-content a.cke_button_disabled:hover {
+	background: transparent;
+}
+
+#tinng-main-content a.cke_button_on {
+	background: #d7d7d7;
+	box-shadow: none;
+}
+
+
 #tinng-main-content .cke_wysiwyg_div {
-	padding:4px 6px;
+	padding:7px;
 }
 
 #tinng-main-content .cke_source {
