стили кнопки в хедере юнита

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -391,6 +391,11 @@ body {
 			&:hover, &.hover {
 				background-color: #2b7cbd;
 			}
+
+			&:active {
+				.opacity(1);
+				background-color: #084978;
+			}
 		}
 
 		.topicname {
@@ -1345,10 +1350,7 @@ input[type="button"] {
 	border-color: #006299;
 }
 
-.unit header .button:active {
-	opacity:0.75;
-	background-color: #ccc;
-}
+
 
 .unit header .button .tip {
 	opacity:0.7;
