--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -344,6 +344,132 @@ body {
 			background-position: center center;
 		}
 	}
+
+	.cke {
+
+		&.cke_chrome {
+			border:none;
+			box-shadow: none;
+		}
+
+		.cke_top {
+			background: transparent;
+			box-shadow: none;
+			padding: 0 0 1px 0;
+			border:none;
+		}
+
+		.cke_bottom {
+			background: transparent;
+			box-shadow: none;
+			padding: 0 0 1px 0;
+			border:none;
+		}
+
+		.cke_bottom {
+			.cke_toolgroup {
+				margin: 5px 6px 0 0;
+			}
+		}
+
+		.cke_contents {
+			border:1px solid;
+			border-color: #ccc #ccc #eee #ccc;
+			min-height: 30px;
+			overflow-y: auto;
+			max-height: 350px;
+		}
+
+		.cke_toolgroup {
+			//border-color: #ccc;
+			border-radius: 0;
+			border:none;
+			box-shadow: none;
+			background: #fff;
+		}
+
+		a.cke_button {
+			padding: 2px 5px;
+			cursor: pointer;
+
+			&:hover {
+				background: #eee;
+				box-shadow: none;
+			}
+
+			span {
+				cursor: pointer;
+			}
+		}
+
+		a.cke_button_disabled {
+			cursor:default;
+
+			&:hover {
+				background: transparent;
+			}
+
+			span {
+				cursor:default;
+			}
+		}
+
+		a.cke_button_on {
+			background: #d7d7d7;
+			box-shadow: none;
+		}
+
+		.cke_wysiwyg_div {
+			padding:7px;
+		}
+
+		.cke_source {
+			background: #333;
+			color:#ddd;
+			display: block;
+			padding: 4px 0;
+		}
+
+		.cke_toolbar_separator {
+			margin: 2px 2px 0;
+		}
+	}
+
+	.textarea-wrapper {
+
+		.cke {
+
+			.cke_top {
+				background: #eee;
+			}
+
+			.cke_bottom{
+				background: #eee;
+			}
+
+			.cke_contents {
+				border-color: #ccc #ccc #ddd #ccc;
+			}
+
+			.cke_toolgroup {
+				background: #eee;
+			}
+
+			a.cke_button:hover {
+				background: #f8f8f8;
+			}
+		}
+	}
+
+	.node {
+		.cke_wysiwyg_div {
+			padding:3px;
+		}
+
+		.cke_contents {
+			min-height: 20px;
+		}
+	}
 }
 
 .unit {
@@ -1081,109 +1207,15 @@ body {
 	background: white;
 	//border:1px solid #ccc;
 	//margin-bottom:4px;
-//	max-height: 200px;
-//	overflow-y: auto;
+	//max-height: 200px;
+	//overflow-y: auto;
 	//padding:1px;
 }
 
 
 
 
-#tinng-main-content .cke_top,
-#tinng-main-content .cke_bottom {
-	background: transparent;
-	box-shadow: none;
-	padding: 0 0 1px 0;
-	border:none;
-}
 
-#tinng-main-content .textarea-wrapper .cke_top,
-#tinng-main-content .textarea-wrapper .cke_bottom{
-	background: #eee;
-}
-
-#tinng-main-content .cke_bottom .cke_toolgroup {
-	margin: 5px 6px 0 0;
-}
-
-#tinng-main-content .cke_chrome {
-	border:none;
-	box-shadow: none;
-}
-
-#tinng-main-content .cke_contents {
-	border:1px solid;
-	border-color: #ccc #ccc #eee #ccc;
-	min-height: 30px;
-	overflow-y: auto;
-	max-height: 350px;
-}
-
-#tinng-main-content .textarea-wrapper .cke_contents {
-	border-color: #ccc #ccc #ddd #ccc;
-}
-
-#tinng-main-content .cke_toolgroup {
-	//border-color: #ccc;
-	border-radius: 0;
-	border:none;
-	box-shadow: none;
-	background: #fff;
-}
-
-/* кнопки */
-
-#tinng-main-content .textarea-wrapper .cke_toolgroup {
-	background: #eee;
-}
-
-#tinng-main-content a.cke_button {
-	padding: 2px 5px;
-	cursor: pointer;
-}
-
-#tinng-main-content a.cke_button span {
-	cursor: pointer;
-}
-
-#tinng-main-content a.cke_button:hover {
-	background: #eee;
-	box-shadow: none;
-}
-
-#tinng-main-content .textarea-wrapper  a.cke_button:hover {
-	background: #f8f8f8;
-}
-
-#tinng-main-content a.cke_button_disabled,
-#tinng-main-content a.cke_button_disabled span{
-	cursor:default;
-}
-
-#tinng-main-content a.cke_button_disabled:hover {
-	background: transparent;
-}
-
-#tinng-main-content a.cke_button_on {
-	background: #d7d7d7;
-	box-shadow: none;
-}
-
-
-#tinng-main-content .cke_wysiwyg_div {
-	padding:7px;
-}
-
-#tinng-main-content .cke_source {
-	background: #333;
-	color:#ddd;
-	display: block;
-	padding: 4px 0;
-}
-
-#tinng-main-content .cke_toolbar_separator {
-	margin: 2px 2px 0;
-}
 
 .submitWrap {
 	position: absolute;
