--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -833,6 +833,11 @@ body {
 		background-color: white;
 		position: relative;
 
+		img {
+			max-width:100%;
+			height:auto !important;
+		}
+
 		.smart-search {
 
 			margin: 0;
@@ -963,6 +968,7 @@ body {
 
 		.message {
 			color:#888;
+			height: 1.3em;
 		}
 	}
 
@@ -1254,7 +1260,8 @@ blockquote {
 	margin:1px 4px 1px 0;
 	border-radius: 2px;
 	display:inline-block;
-	background-color: #007bb7;
+	background-color: #d0e7ff;
+	color:#3f6c9a;
 	padding: 2px 4px;
 	border-radius: 0;
 	position: relative;
@@ -1572,3 +1579,9 @@ input[type="button"] {
 		}
 	}
 }
+
+
+/*.cke_dialog_ui_text, .cke_dialog_ui_vbox {
+	display:none;
+}*/
+
