Онлайн-статус в панели доступа

--- a/apps/web.main/skins/clarity/styles/design.less
+++ b/apps/web.main/skins/clarity/styles/design.less
@@ -737,6 +737,17 @@ body {
 		float:left;
 	}
 
+	.isOnline {
+		width: 4px;
+		height: 4px;
+//		border-left: 0;
+	}
+
+	.avatarWrap {
+		float:left;
+		position: relative;
+	}
+
 	.avatar {
 		width: 25px;
 		height: 25px;
